# RobotSwarmSimulator

./: .gitignore  LICENSE  MANIFEST.in  README.md  evolve.py  main.py  pyproject.toml  requirements.txt  results.py  setup.py  simulate.py
data/: testing_labels.csv  unknown.csv
data/diffdrivegenomes/: aggregation.csv  cyclic.csv  dispersal.csv  milling.csv  random.csv  wall-following.csv
demo/evolution/: evaluate.py  goal_search.py  homogeneous_search.py  levy_milling_mix.py  mecanum_drive_search.py  novelty_search.py  optimized_ns.py  playground.py  search_sweeper.py  two_species_mix.py
demo/interfacing/: eval-in-the-loop.py
demo/misc/: agent_width_measure.py  class_labeler.py  gamma_tests.py  gif_dump.py  gif_dump2.py  graph_connectivity.py  icra-metres-to-pixels.py  metadata.csv  rename_videoset.py  yaml_tests.py
demo/results/: entropic_graphing.py  graphing_results.py  post_process_optim_data.py  results_from_file.py
demo/simulation/: aggregation.py  cyclic_pursuit.py  dispersal.py  milling.py  playground.py  random.py  random_behavior.py  wall_following.py
novel_swarms/.dev/: augment.py
novel_swarms/agent/: Agent.py  AgentFactory.py  DiffDriveAgent.py  LevyAgent.py  MazeAgent.py  UnicycleAgent.py
novel_swarms/behavior/: AbstractBehavior.py  AgentsAtGoal.py  AlgebraicConnectivity.py  AngularMomentum.py  AverageSpeed.py  ConvexHull.py  DistanceToGoal.py  GroupRotationBehavior.py  KNN.py  LargestSeparation.py  MeanNeighbors.py  RadialVariance.py  ScatterBehavior.py  SensorOffset.py  SensorRotation.py  Squareness.py
novel_swarms/cache/: ExternalSimulationArchive.py
novel_swarms/config/: AgentConfig.py  EvolutionaryConfig.py  OutputTensorConfig.py  WorldConfig.py  defaults.py
novel_swarms/gui/: abstractGUI.py  agentGUI.py  evolutionGUI.py
novel_swarms/novelty/: BehaviorDiscovery.py  GeneRule.py  NoveltyArchive.py  evolve.py
novel_swarms/results/: Cluster.py  ClusterPoint.py  Trends.py  behavior_metrics.py  results.py
novel_swarms/sensors/: AbstractSensor.py  BinaryFOVSensor.py  BinaryLOSSensor.py  GenomeDependentSensor.py  SensorSet.py  StaticSensor.py
novel_swarms/util/: labeler.py  timer.py
novel_swarms/world/: RectangularWorld.py  World.py  WorldFactory.py  WorldObject.py  simulate.py
src/.dev/: augment.py
src/agent/: Agent.py  AgentFactory.py  DiffDriveAgent.py
src/behavior/: AbstractBehavior.py  AngularMomentum.py  AverageSpeed.py  GroupRotationBehavior.py  RadialVariance.py  ScatterBehavior.py  (+2 more)
(+340 files in other folders)
